src/index.css
html, body {
    text-align: center;
    margin: 0 auto;
}

.source-toggle-title {
    color: white;
    margin-top: 5px;
    margin-right: 10px;
    font-size: 16px;
}

.bookmark-icon {
    padding-top: 5px;
    padding-bottom: 20px;
    padding-right: 30px;
}

.react-switch {
    margin-top: 5px;
    margin-right: 10px;
}

.mr-auto {
    width: 100%;
}

.search-text-box {
    width: 250px;
}

#navigation-bar {
    background-image: linear-gradient(to right, #17284F, #476DB8);
    margin-bottom: 0px;
}

#basic-navbar-nav {
    width: 100%;
    text-align: left;
}

.react-switch:focus {
    outline: none;
}

.bounce-loader {
    margin-top: 100px;
    display: inline-block;
    text-align: center;
    bottom: 0;
}

.main-container {
    width: 100%;
    text-align: center;
    margin: 0 auto;
    display: table;
    border-spacing: 0px 20px;
}

.headline-card {
    transition: 0.3s;
    border-radius: 4px 4px 4px 4px;
    text-align: left;
    background-color: white;
    border: solid;
    border-width: thin;
    border-color: rgb(220, 220, 220);
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 30px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    display: grid;
    grid-template-columns: max-content auto;
    grid-auto-flow: row;
}

.headline-card:hover, .deck-cards:hover {
    cursor: pointer;
}

.headline-card-img {
    display: block;
    max-height: 250px;
    max-width: 330px;
    object-fit: cover;
    margin: 20px 0px 20px 20px;
}

.bottom-card-info {
    overflow: hidden;
}

.date-tag {
    float: left;
}

.section-tag {
    border-radius: 5px 5px 5px 5px;
    text-align: center;
    margin-left: 10px;
    float: right;
    padding: 2px 5px 2px 5px;
}

.title-container {
    overflow: hidden;
}

.article-title {
    float: left;
}

.notification-tab {
    width: 400px;
    color: black;
    cursor: auto;
}

.share-button {
    margin-left: 30px;
    margin-right: 30px;
}

.share-button:focus {
    outline: none;
}

.card-details {
    border-radius: 4px 4px 4px 4px;
    text-align: left;
    background-color: white;
    border: solid;
    border-width: thin;
    border-color: rgb(220, 220, 220);
    margin-top: 10px;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 30px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.card-buttons-row, .elipsis-icon {
    float: right;
}

.card-buttons:hover, .elipsis-icon:hover, .bookmark-icon:hover {
    cursor: pointer;
}

.card-buttons:focus {
    outline: none;
}

.favorites-title {
    color: rgb(99, 99, 99);
    padding-left: 20px;
    text-align: left;
}

.no-saved-articles {
    color: rgb(99, 99, 99);
    padding-left: 20px;
    text-align: center;
}

.deck {
    margin: 0 auto;
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.deck-cards-img {
    margin-bottom: 10px;
    max-height: 200px;
    width: 100%;
    object-fit: cover;
}

.deck-cards {
    max-width: 400px;
    transition: 0.3s;
    border-radius: 4px 4px 4px 4px;
    text-align: left;
    background-color: white;
    border: solid;
    border-width: thin;
    border-color: rgb(220, 220, 220);
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 30px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.deck-cards-icon {
    padding-left: 10px;
}

@media only screen and (max-width: 600px) {
    .notification-tab {
        width: 100%;
    }
    .headline-card {
        display: inline-block;
    }
    .headline-container {
        padding-top: 0;
    }
}

